--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,11 @@ name: Run Tests and Upload Coverage
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   test:
@@ -17,7 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install
@@ -27,8 +29,8 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
-          with:
-            token: ${{ secrets.CODECOV_TOKEN }}  # Optional if repo is public
-            files: ./coverage/lcov.info           # Default Jest output file
-            flags: unittests                      # Optional tagging
-            name: codecov-coverage-report         # Optional name
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}  # Optional if repo is public
+          files: ./coverage/lcov.info           # Default Jest output file
+          flags: unittests                      # Optional tagging
+          name: codecov-coverage-report         # Optional name
