--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -30,7 +32,8 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}  # Optional if repo is public
+          # token: ${{ secrets.CODECOV_TOKEN }}  # Optional if repo is public
           files: ./coverage/lcov.info           # Default Jest output file
           flags: unittests                      # Optional tagging
           name: codecov-coverage-report         # Optional name
+          fail_ci_if_error: true
