--- a/.github/workflows/fix-coverage.yml
+++ b/.github/workflows/fix-coverage.yml
@@ -23,7 +23,7 @@ jobs:
       run: npm install
 
     - name: Run tests with coverage
-      run: npm test
+      run: npm test -- --forceExit
 
     # This simplified workflow doesn't include the coverage upload steps
-    # that might be causing issues
+    # and adds --forceExit to handle hanging processes
