--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
 
       - name: Run tests with coverage
-        run: npm test -- --coverage
+        run: npm test -- --coverage --forceExit
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
