--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,9 +31,10 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
+        continue-on-error: true
         with:
           # token: ${{ secrets.CODECOV_TOKEN }}  # Optional if repo is public
           files: ./coverage/lcov.info           # Default Jest output file
           flags: unittests                      # Optional tagging
           name: codecov-coverage-report         # Optional name
-          fail_ci_if_error: true
+          fail_ci_if_error: false
