--- a/codecov.yml
+++ b/codecov.yml
@@ -2,6 +2,7 @@ codecov:
   require_ci_to_pass: yes
   url: "https://codecov.io/gh/powerfulqa/aszune-ai-bot"
   token: b7ab670b-dbae-43a4-8847-2ce55004e66d
+  slug: "powerfulqa/aszune-ai-bot"
 
 coverage:
   precision: 2
