--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/powerfulqa/aszune-ai-bot"
+  },
   "dependencies": {
     "axios": "^1.8.4",
     "discord.js": "^14.18.0",
