Implement direct Codecov CLI usage with forced organization repository path

--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Run tests with coverage
         run: npm test -- --coverage --forceExit
         
-      - name: Debug repository info
-        run: node debug-codecov.js
+      - name: Set correct repository info for Codecov
+        run: node codecov-force-org.js
 
       - name: Upload coverage to QLTY
         uses: qltysh/qlty-action/coverage@v1
@@ -43,23 +43,23 @@ jobs:
           token: ${{ secrets.QLTY_COVERAGE_TOKEN }}
           files: coverage/lcov.info
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        continue-on-error: true
-        if: github.event_name == 'push' || github.event_name == 'pull_request'
-        env:
-          CODECOV_NAME: powerfulqa/aszune-ai-bot
-          CODECOV_SLUG: powerfulqa/aszune-ai-bot
-          GITHUB_REPOSITORY: powerfulqa/aszune-ai-bot
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: coverage/lcov.info
-          flags: unittests
-          slug: powerfulqa/aszune-ai-bot
-          override_branch: feature/smart-cache
-          override_commit: ${{ github.sha }}
-          fail_ci_if_error: false
-          verbose: true
+      - name: Prepare Codecov environment
+        run: |
+          # Source the environment variables from our script
+          if [ -f codecov-fix.env ]; then
+            cat codecov-fix.env >> $GITHUB_ENV
+          fi
+          # Make wrapper executable
+          chmod +x codecov-wrapper.sh
+          
+      - name: Upload coverage to Codecov manually
+        run: |
+          # First get the CLI tool
+          curl -Os https://cli.codecov.io/latest/linux/codecov
+          chmod +x codecov
+          
+          # Use our wrapper to run the CLI with the correct environment variables
+          ./codecov-wrapper.sh ./codecov -v upload -t ${{ secrets.CODECOV_TOKEN }} -f coverage/lcov.info -F unittests -R powerfulqa/aszune-ai-bot -C ${{ github.sha }} -B feature/smart-cache
 
   simple-test:
     name: Simple Test (No Coverage)
