--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -32,9 +32,6 @@ jobs:
       - name: Run tests with coverage
         run: npm test -- --coverage --forceExit
         
-      - name: Set correct repository info for Codecov
-        run: node codecov-force-org.js
-
       - name: Upload coverage to QLTY
         uses: qltysh/qlty-action/coverage@v1
         continue-on-error: true
@@ -43,35 +40,12 @@ jobs:
           token: ${{ secrets.QLTY_COVERAGE_TOKEN }}
           files: coverage/lcov.info
 
-      - name: Prepare Codecov environment
-        run: |
-          # Source the environment variables from our script
-          if [ -f codecov-fix.env ]; then
-            cat codecov-fix.env >> $GITHUB_ENV
-          fi
-          # Make wrapper executable
-          chmod +x codecov-wrapper.sh
-          
-      - name: Upload coverage to Codecov manually
-        run: |
-          # First get the CLI tool
-          curl -Os https://cli.codecov.io/latest/linux/codecov
-          chmod +x codecov
-          
-          # Run the debug script to capture environment info
-          node debug-codecov.js > codecov-debug-output.txt
-          
-          # Show available commands and CLI version
-          ./codecov --version
-          
-          # Use our wrapper to run the CLI with the correct environment variables
-          ./codecov-wrapper.sh ./codecov -v do-upload \
-            --token ${{ secrets.CODECOV_TOKEN }} \
-            --file coverage/lcov.info \
-            --flag unittests \
-            --slug powerfulqa/aszune-ai-bot \
-            --commit-sha ${{ github.sha }} \
-            --branch feature/smart-cache
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage/lcov.info
+          fail_ci_if_error: false
 
   simple-test:
     name: Simple Test (No Coverage)
