--- a/codecov.yml
+++ b/codecov.yml
@@ -8,7 +8,19 @@ coverage:
   round: down
   range: "70...100"
 
-comment: false
+comment:
+  layout: "reach, diff, flags, files"
+  behavior: default
+  require_changes: false  # if true: only post the comment if coverage changes
+  require_base: no        # [yes :: must have a base report to post]
+  require_head: yes       # [yes :: must have a head report to post]
 
 github_checks:
   annotations: false
+
+# Enable AI features for PR reviews
+ai:
+  features:
+    - review
+    - tests
+  show_help: true
