--- a/codecov.yml
+++ b/codecov.yml
@@ -7,6 +7,13 @@ coverage:
   precision: 2
   round: down
   range: "70...100"
+  status:
+    project:
+      default:
+        informational: true
+    patch:
+      default:
+        informational: true
 
 comment:
   layout: "reach, diff, flags, files"
@@ -17,12 +24,3 @@ comment:
 
 github_checks:
   annotations: false
-
-# Enable Codecov AI Reviewer for PR reviews
-feature:
-  ai:
-    review:
-      enabled: true
-    tests:
-      enabled: true
-    show_help: true
