Improves cache robustness, normalization, and error handling
Enhances the caching system with stricter input validation, advanced question normalization (case, whitespace, punctuation), and expanded edge case handling for Unicode, long inputs, and file system errors. Implements LRU eviction, detailed cache metrics, and debounced disk operations for efficiency. Updates automated tests, documentation, and CI to reflect new robustness and coverage. These changes increase reliability, cache hit rate, and resilience against operational failures.

--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -29,8 +29,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Security audit
+        run: npm run security
+        continue-on-error: true
+
       - name: Run tests with coverage
-        run: npm test -- --coverage --forceExit --testResultsProcessor=jest-junit
+        run: npm run test:ci
         env:
           JEST_JUNIT_OUTPUT_DIR: ./test-results/
           JEST_JUNIT_OUTPUT_NAME: junit.xml
