--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "axios": "^1.8.4",
     "discord.js": "^14.18.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "lru-cache": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
