--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "url": "git+https://github.com/powerfulqa/aszune-ai-bot.git"
   },
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "axios": "^1.8.4",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
