--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.1.0",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest --coverage",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "jest",
+    "format:md": "prettier --write '**/*.md'",
+    "format": "prettier --write 'src/**/*.js' '__tests__/**/*.js'"
   },
   "keywords": [],
   "author": "",
@@ -14,18 +16,13 @@
   "dependencies": {
     "axios": "^1.8.4",
     "discord.js": "^14.18.0",
-    "dotenv": "^16.4.7"
-  },  "devDependencies": {
+    "dotenv": "^16.4.7",
+    "undici": "^7.12.0"
+  },
+  "devDependencies": {
     "codecov": "^3.8.2",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2"
-  },
-  "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "jest",
-    "format:md": "prettier --write '**/*.md'",
-    "format": "prettier --write 'src/**/*.js' '__tests__/**/*.js'"
   }
 }
