--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
         uses: codecov/test-results-action@v1
+        continue-on-error: true
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
