--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest",
-    "test:ci": "jest --ci --coverage",
+    "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit",
     "security": "npm audit",
     "format:md": "prettier --write '**/*.md'",
     "format": "prettier --write 'src/**/*.js' '__tests__/**/*.js'"
@@ -23,6 +23,7 @@
   "devDependencies": {
     "codecov": "^3.8.2",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2"
   }
