--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm install
 
       - name: Security audit
-        run: npm run security
+        run: npm audit --audit-level=high
         continue-on-error: true
 
       - name: Run tests with coverage
