--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "jest-junit": "^16.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2"
+  },
+  "engines": {
+    "node": ">=20.18.1"
   }
 }
