fix: Address PR review comments
- Improved security audit configuration in CI workflow
- Enhanced error handling in Perplexity API response processing
- Fixed parsing logic for different content types in API responses

--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Security audit
         run: npm audit --audit-level=high
-        continue-on-error: true
+        # Only fail on high severity issues, but output is still visible in logs
 
       - name: Run tests with coverage
         run: npm run test:ci
