feat: implement PR review feedback
- Add isShuttingDown flag to prevent multiple shutdown executions

- Simplify error handling in Perplexity service

- Update CI workflow security audit configuration

--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -30,8 +30,9 @@ jobs:
         run: npm install
 
       - name: Security audit
-        run: npm audit --audit-level=high
-        # Only fail on high severity issues, but output is still visible in logs
+        run: npm audit --audit-level=high --production
+        # Fail on high severity issues in production dependencies
+        # This is a required check for production deployments
 
       - name: Run tests with coverage
         run: npm run test:ci
