Refactors test config and improves cache logic
Splits branch coverage tests into separate commands for better maintainability and flexibility.

Extracts cache usage logic into a dedicated method to clarify intent and support future extension.

Improves cache option handling and prepares for more robust unit testing and branch coverage reporting.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit",
     "security": "npm audit --audit-level=high",
     "format:md": "prettier --write '**/*.md'",
-    "test:branch-coverage": "jest --config=index-branch-coverage.jest.config.js __tests__/unit/index-branch-coverage.test.js && jest --config=logger-branch-coverage.jest.config.js \"__tests__/unit/logger*.test.js\"",
+    "test:branch-coverage:index": "jest --config=index-branch-coverage.jest.config.js __tests__/unit/index-branch-coverage.test.js",
+    "test:branch-coverage:logger": "jest --config=logger-branch-coverage.jest.config.js \"__tests__/unit/logger*.test.js\"",
+    "test:branch-coverage": "npm run test:branch-coverage:index && npm run test:branch-coverage:logger",
     "coverage": "jest --coverage",
     "serve": "node src/index.js",
     "format": "prettier --write \"**/*.{js,json,md}\"",
