--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -23,11 +23,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.18.1'
+          node-version: '22.17.0'
           cache: 'npm'
 
       - name: Install dependencies
         run: npm install
+
+      - name: Clear Jest cache
+        run: npx jest --clearCache
 
       - name: Security audit
         run: npm audit --audit-level=high --production
