--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,10 @@
     {
       "files": ["**/__tests__/**/*.js", "**/*.test.js"],
       "rules": {
-        "max-lines-per-function": ["error", { "max": 200, "skipBlankLines": true, "skipComments": true }],
+        "max-lines-per-function": [
+          "error",
+          { "max": 200, "skipBlankLines": true, "skipComments": true }
+        ],
         "max-statements": ["error", 100],
         "complexity": ["error", { "max": 30 }],
         "max-depth": ["error", 6],
