feat: Complete v1.5.0 qlty integration and comprehensive documentation updates
Major v1.5.0 Enhancements:
- Complete qlty integration framework with working npm scripts
- Enhanced documentation and code quality standards
- Comprehensive test coverage improvements
- Professional development workflow implementation

qlty Integration:
- Install and configure qlty CLI tool
- Set up complete .qlty/ configuration structure
- Create working npm scripts for quality checks
- Document current capabilities and limitations
- Add QLTY-STATUS-UPDATE.md for transparency

Quality Improvements:
- Enhanced test coverage and critical coverage system
- Updated ESLint configurations and standards
- Improved code formatting and consistency
- Professional documentation standards implementation

Directory Structure & Documentation:
- Updated all cross-references for moved files
- Enhanced release notes with complete feature details
- Improved wiki documentation and navigation
- Added comprehensive implementation guides

Working Commands Available:
- npm run quality:check (ESLint + Critical Coverage)
- npm run quality:fix (Prettier formatting)
- npm run security:dependencies (npm audit)
- npm run quality:metrics (informational)

This represents the complete v1.5.0 transformation establishing professional development standards, comprehensive quality assurance, and modern tooling integration while maintaining full backward compatibility."

--- a/.qlty/qlty.toml
+++ b/.qlty/qlty.toml
@@ -63,3 +63,21 @@ test_patterns = [
   "**/jest.*.js",
   "**/test/**"
 ]
+
+[[plugin]]
+name = "eslint"
+
+[[plugin]]
+name = "prettier"
+
+[[plugin]]
+name = "gitleaks"
+
+[[plugin]]
+name = "trivy"
+
+[[plugin]]
+name = "semgrep"
+
+[[plugin]]
+name = "markdownlint"
