ci: Add documentation comments to CI workflow to trigger build test
- Add explanatory comments about npm script usage
- Trigger CI pipeline to verify workflow fixes are working
- Test that quality checks now pass with npm scripts instead of qlty CLI
- Validate that security scans work with npm audit

This commit will help verify the CI fixes are working correctly."

--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -1,5 +1,8 @@
 name: Aszune AI Bot CI/CD
 
+# Updated CI workflow to use working npm scripts instead of problematic qlty CLI commands
+# This ensures reliable quality checks while maintaining all functionality
+
 on:
   push:
     branches:
