--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -1,5 +1,8 @@
 name: Aszune AI Bot CI/CD
 
+# Updated CI workflow to use working npm scripts instead of problematic qlty CLI commands
+# This ensures reliable quality checks while maintaining all functionality
+
 on:
   push:
     branches:
@@ -32,6 +35,14 @@ jobs:
       - name: Clear Jest cache
         run: npx jest --clearCache
 
+      - name: Run quality checks
+        run: npm run quality:check
+        continue-on-error: false
+
+      - name: Run security scans
+        run: npm run security:dependencies
+        continue-on-error: true
+
       - name: Security audit
         run: npm audit --audit-level=high --production
         # Fail on high severity issues in production dependencies
@@ -43,13 +54,9 @@ jobs:
           JEST_JUNIT_OUTPUT_DIR: ./test-results/
           JEST_JUNIT_OUTPUT_NAME: junit.xml
         
-      - name: Upload coverage to QLTY
-        uses: qltysh/qlty-action/coverage@v1
+      - name: Run additional quality metrics
+        run: npm run quality:metrics
         continue-on-error: true
-        if: github.event_name == 'push' || github.event_name == 'pull_request'
-        with:
-          token: ${{ secrets.QLTY_COVERAGE_TOKEN }}
-          files: coverage/lcov.info
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
