--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "aszuneai",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest",
     "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit",
+    "test:critical": "jest --config=jest.critical-coverage.config.js --coverage",
+    "test:critical:ci": "jest --config=jest.critical-coverage.config.js --coverage --silent --passWithNoTests --ci",
+    "coverage:critical": "jest --config=jest.critical-coverage.config.js --coverage --coverageReporters=lcov --coverageReporters=text-summary",
+    "precommit": "npm run test:critical:ci",
     "security": "npm audit --audit-level=high",
     "format:md": "prettier --write '**/*.md'",
     "test:branch-coverage:index": "jest --config=index-branch-coverage.jest.config.js __tests__/unit/index-branch-coverage.test.js",
@@ -16,12 +20,35 @@
     "serve": "node src/index.js",
     "format": "prettier --write \"**/*.{js,json,md}\"",
     "lint": "eslint src __tests__",
-    "lint:fix": "eslint src __tests__ --fix"
+    "lint:fix": "eslint src __tests__ --fix",
+    "quality:check": "npm run test:critical:ci",
+    "quality:fix": "prettier --write \"**/*.{js,json,md}\"",
+    "quality:metrics": "echo \"Quality metrics: Use 'npm run coverage' for test coverage and 'npm run lint' for code quality\"",
+    "quality:smells": "echo \"Code analysis: Use 'npm run lint' for code quality checks\"",
+    "security:secrets": "echo \"Security: Manual review recommended for secrets\"",
+    "security:dependencies": "npm audit --audit-level=moderate",
+    "security:all": "npm run security && npm run security:secrets && npm run security:dependencies"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "discord",
+    "bot",
+    "ai",
+    "gaming",
+    "perplexity",
+    "nodejs",
+    "raspberry-pi"
+  ],
+  "author": "Chris Haycock <chrishaycock@users.noreply.github.com>",
+  "license": "MIT",
+  "description": "A Discord bot specialized in gaming lore, game logic, guides, and advice using the Perplexity API",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chrishaycock/aszune-ai-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chrishaycock/aszune-ai-bot/issues"
+  },
+  "homepage": "https://github.com/chrishaycock/aszune-ai-bot#readme",
   "dependencies": {
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
