feat: v1.6.0 - Complete Analytics & Proprietary Licensing System
🔄 License Migration: MIT → Proprietary License with Free Personal Use

🎯 Major Features:
- Analytics & Monitoring: /analytics, /dashboard, /resources commands
- Proprietary Licensing: Built-in validation with 7-day grace period
- License Server: Express.js management system with web dashboard
- Raspberry Pi: Automated license server deployment & optimization

🛠️ Technical Improvements:
- Enhanced command parameter validation and error handling
- Professional code quality with removed internal terminology
- Comprehensive test suite expanded to 991+ tests
- Improved Discord embed formatting and user experience

📚 Documentation:
- Complete README overhaul with licensing information
- Professional positioning for commercial use
- Enhanced GitHub Copilot instructions
- Comprehensive feature documentation for analytics

🔧 Files Added:
- LICENSE: Proprietary license terms
- src/utils/license-validator.js: Built-in license validation
- src/utils/license-server.js: License management server
- scripts/pi-license-setup.sh: Automated Pi deployment
- docs/LICENSE-SERVER-SETUP.md: Server setup guide
- docs/RASPBERRY-PI-LICENSE-SETUP.md: Pi setup guide

⚡ Ready for v1.6.0 release with enterprise-grade capabilities

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "raspberry-pi"
   ],
   "author": "Chris Haycock <chrishaycock@users.noreply.github.com>",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "description": "A Discord bot specialized in gaming lore, game logic, guides, and advice using the Perplexity API",
   "repository": {
     "type": "git",
