--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "semi": true,
-  "proseWrap": "always"
+  "proseWrap": "always",
+  "endOfLine": "crlf"
 }
