--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "chrono-node": "^2.9.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
     "undici": "^7.12.0"
   },
   "devDependencies": {
