--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "restart": "npm run restart:systemd || npm run restart:standalone",
+    "restart:systemd": "sudo systemctl restart aszune-ai-bot",
+    "restart:standalone": "pkill -f 'node src/index.js' || true && sleep 1 && node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest",
     "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit",
