refactor(dashboard): use systemctl for restart and improve git pull error handling

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ ENABLE_LICENSE_ENFORCEMENT=false
 NODE_ENV=production
 DEBUG=false
 
+# Dashboard Control - Systemd Service Configuration
+SERVICE_NAME=aszune-bot
+
 # Raspberry Pi Optimizations
 ENABLE_PI_OPTIMIZATIONS=false
 PI_LOG_LEVEL=ERROR
