--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "aszuneai",
   "version": "1.9.0",
+  "description": "Aszune AI Bot - Discord bot with Perplexity AI integration",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
